// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelHandler applies anchor commit correctly 1`] = `
{
  "anchorProof": {
    "blockNumber": 123456,
    "blockTimestamp": 1615799679,
    "chainId": "fakechain:123",
  },
  "anchorStatus": 3,
  "content": {
    "accountRelation": {
      "type": "list",
    },
    "name": "MyModel",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "stringPropName": {
          "maxLength": 80,
          "type": "string",
        },
      },
      "required": [
        "stringPropName",
      ],
      "type": "object",
    },
  },
  "log": [
    {
      "cid": {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "timestamp": 1615799679,
      "type": 0,
    },
    {
      "cid": {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          123,
          201,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "timestamp": 1615799679,
      "type": 2,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "code": 113,
        "hash": Uint8Array [
          113,
          11,
          0,
          9,
          104,
          109,
          111,
          100,
          101,
          108,
          45,
          118,
          49,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 4,
    },
  },
  "signature": 2,
  "type": 2,
}
`;

exports[`ModelHandler applies commit made using an old key if it is applied within the revocation period 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "accountRelation": {
      "type": "list",
    },
    "name": "MyModel",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "stringPropName": {
          "maxLength": 80,
          "type": "string",
        },
      },
      "required": [
        "stringPropName",
      ],
      "type": "object",
    },
  },
  "log": [
    {
      "cid": {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "code": 113,
        "hash": Uint8Array [
          113,
          11,
          0,
          9,
          104,
          109,
          111,
          100,
          101,
          108,
          45,
          118,
          49,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 4,
    },
  },
  "signature": 2,
  "type": 2,
}
`;

exports[`ModelHandler applies genesis commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "accountRelation": {
      "type": "list",
    },
    "name": "MyModel",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "stringPropName": {
          "maxLength": 80,
          "type": "string",
        },
      },
      "required": [
        "stringPropName",
      ],
      "type": "object",
    },
  },
  "log": [
    {
      "cid": {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "code": 113,
        "hash": Uint8Array [
          113,
          11,
          0,
          9,
          104,
          109,
          111,
          100,
          101,
          108,
          45,
          118,
          49,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 4,
    },
  },
  "signature": 2,
  "type": 2,
}
`;

exports[`ModelHandler applies genesis commits with views properties correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "accountRelation": {
      "type": "list",
    },
    "name": "MyModel",
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "stringPropName": {
          "maxLength": 80,
          "type": "string",
        },
      },
      "required": [
        "stringPropName",
      ],
      "type": "object",
    },
    "views": {
      "owner": {
        "type": "documentAccount",
      },
    },
  },
  "log": [
    {
      "cid": {
        "code": 112,
        "hash": Uint8Array [
          18,
          32,
          222,
          189,
          122,
          219,
          60,
          229,
          101,
          68,
          210,
          42,
          111,
          107,
          147,
          57,
          111,
          105,
          128,
          168,
          6,
          124,
          44,
          193,
          52,
          240,
          247,
          128,
          27,
          99,
          49,
          9,
          43,
          149,
        ],
        "version": 1,
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": {
        "code": 113,
        "hash": Uint8Array [
          113,
          11,
          0,
          9,
          104,
          109,
          111,
          100,
          101,
          108,
          45,
          118,
          49,
        ],
        "version": 1,
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 4,
    },
  },
  "signature": 2,
  "type": 2,
}
`;
